--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -36,32 +36,27 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>3.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.cj.restspecs</groupId>
 		    <artifactId>rest-specs-core</artifactId>
-			<version>${project.version}</version>
 		</dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.9</version>
         </dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-project</artifactId>
-			<version>2.0.11</version>
 		</dependency>		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
 			<artifactId>plexus-component-annotations</artifactId>
-			<version>1.5.5</version>
-		</dependency>	</dependencies>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
