--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.cj.restspecs</groupId>
     <artifactId>restspecs-depman</artifactId>
-    <version>10-SNAPSHOT</version>
+    <version>10.0.0</version>
     <relativePath>../depman/pom.xml</relativePath>
   </parent>
   <artifactId>rest-specs-html-renderer</artifactId>
