--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -30,7 +30,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <goals>
@@ -39,6 +39,10 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+            <scalaCompatVersion>2.11</scalaCompatVersion>
+            <scalaVersion>2.11.8</scalaVersion>
+        </configuration>
       </plugin>
       <plugin>
         <!-- create an empty javadoc jar to satisfy maven central rules -->
