--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,7 +23,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <httpobjects-version>0.13.0</httpobjects-version>
-    <jackson-version>2.3.0</jackson-version>
+    <jackson-version>2.5.3</jackson-version>
   </properties>
   <build>
     <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
@@ -41,6 +41,10 @@
                   </goals>
               </execution>
           </executions>
+          <configuration>
+              <scalaCompatVersion>2.11</scalaCompatVersion>
+              <scalaVersion>2.11.8</scalaVersion>
+          </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -96,7 +100,7 @@
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>2.11.1</version>
+      <version>2.11.8</version>
     </dependency>
     <dependency>
       <groupId>org.httpobjects.jetty</groupId>
