--- a/http-objects/pom.xml
+++ b/http-objects/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.cj.restspecs</groupId>
     <artifactId>restspecs-depman</artifactId>
-    <version>10.0.3-SNAPSHOT</version>
+    <version>10.0.3</version>
     <relativePath>../depman/pom.xml</relativePath>
   </parent>
   <artifactId>restspecs-http-objects</artifactId>
