--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.cj.restspecs</groupId>
     <artifactId>restspecs-depman</artifactId>
-    <version>10.0.3-SNAPSHOT</version>
+    <version>10.0.3</version>
     <relativePath>../depman/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
