--- a/depman/pom.xml
+++ b/depman/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.cj.restspecs</groupId>
     <artifactId>restspecs-bom</artifactId>
-    <version>10.0.7</version>
+    <version>10.0.8</version>
     <relativePath>../bom/pom.xml</relativePath>
   </parent>
   <artifactId>restspecs-depman</artifactId>
@@ -17,7 +17,7 @@
   </prerequisites>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <httpobjects-version>0.13.0</httpobjects-version>
+    <httpobjects-version>0.27.0</httpobjects-version>
     <jackson-version>2.5.3</jackson-version>
   </properties>
   <dependencies>
@@ -118,17 +118,17 @@
       <dependency>
         <groupId>com.mockrunner</groupId>
         <artifactId>mockrunner-servlet</artifactId>
-        <version>1.0.0</version>
+        <version>2.0.7</version>
       </dependency>
       <dependency>
         <groupId>org.httpobjects</groupId>
         <artifactId>httpobjects</artifactId>
-        <version>0.13.0</version>
+        <version>${httpobjects-version}</version>
       </dependency>
       <dependency>
         <groupId>org.httpobjects.servlet</groupId>
         <artifactId>httpobjects-servlet</artifactId>
-        <version>0.13.0</version>
+        <version>${httpobjects-version}</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -138,7 +138,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <version>4.12</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -169,7 +169,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
               </pluginExecutions>
