--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.cj.restspecs</groupId>
   <artifactId>rest-specs-pom</artifactId>
-  <version>10.0.7</version> 
+  <version>10.0.8</version>
   <packaging>pom</packaging>
   <name>RESTSPECS :: Modules Parent</name>
   <url>https://github.com/cjdev/rest-specs.git</url>
